<resources>
    <string name="app_name">Boove</string>

    <!--Login panel strings-->
    <string name="username">Username</string>
    <string name="loginHint">Enter your username ...</string>
    <string name="password">Password</string>
    <string name="passwordHint">Enter your password ...</string>
    <string name="loginButton">Login</string>
    <string name="registerButton">No account yet? Create one</string>

    <!--register panel strings-->
    <string name="email">Email: </string>
    <string name="emailHint">Enter your email ...</string>
    <string name="age">Date of birth: </string>
    <string name="ageHint">Enter your age ...</string>
    <string name="createAccountButton">Create account</string>
    <string name="title_activity_user_main_panel">UserMainPanel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_main_page">Main page</string>
    <string name="menu_user_panel">User panel</string>
    <string name="menu_about">About</string>
    <string name="menu_add_composition">Add Composition</string>
    <string name="menu_scroll_composition">Scroll Composition</string>
    <string name="menu_collection">Collections</string>
    <string name="menu_sign_out">Log out</string>
    
    <string name="recently_searched">Recently searched </string>
    <string name="recently_popular">Recently Popular</string>
    <string name="latest">Latest</string>
    
    <string name="favourites">Favourites</string>
    <string name="favourites_books">Books</string>
    <string name="favourites_movies">Movies</string>
    <string name="favourites_songs">Songs</string>

    <string name="description">Description</string>
    <string name="title">Title: </string>
    <string name="author">Author: </string>

    <string name="example_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis placerat quam at iaculis condimentum. Sed nunc leo, condimentum quis nisl ut, sodales maximus massa. Nam elementum vitae felis a semper. Sed rhoncus nunc nec congue ornare. Duis a lectus laoreet, rutrum lorem in, mattis felis. In in mauris nec dui mattis elementum et sit amet felis. In tempor maximus tellus sed tristique. In id tempus neque, eleifend pharetra turpis. Nulla sed convallis neque. Duis egestas sed tortor quis porttitor. Suspendisse potenti. Duis mauris nulla, fermentum nec egestas in, maximus ac sapien.</string>

    <string name="about_title">About</string>
    <string name="about_application">Aplikacja została stworzona w ramach zajęć związanych z blokiem obieralnym "Technologie mobile" Autorami aplikacji są: Krzysztof Kaczyński, Dawid Macias, Jakub Wojtaszewski oraz Karol Oleksy.</string>

    <string name="composition_resources">Composition resources</string>
    
    <string name="collection_name">Name: </string>
    <string name="enter_collection_name">Enter collection name...</string>
    <string name="collection_description">Description: </string>
    <string name="enter_collection_description">Enter description...</string>
    <string name="collection_add_resource">Add resource: </string>
    <string name="button_create_composition">Create</string>
    
    <string name="available_compositions">Available compositions</string>
    <string name="save_button">Save</string>

</resources>
