<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main_page"
            android:icon="@drawable/ic_home_black"
            android:title="@string/menu_main_page" />
        <item
            android:id="@+id/nav_user_panel"
            android:icon="@drawable/ic_person_nav_24dp"
            android:title="@string/menu_user_panel" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/favourites" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_assignment_return_black_24dp"
            android:title="@string/menu_sign_out" />

    </group>


</menu>
