<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_main_page">

    <fragment
        android:id="@+id/nav_main_page"
        android:name="com.example.booksagregator.ui.home.HomeFragment"
        android:label="@string/menu_main_page"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_user_panel"
        android:name="com.example.booksagregator.ui.userpanel.UserPanelFragment"
        android:label="@string/menu_user_panel"
        tools:layout="@layout/fragment_user_panel" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.booksagregator.ui.about.AboutAppFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about_app" />

    <fragment
        android:id="@+id/nav_sign_out"
        android:name="com.example.booksagregator.ui.logout.LogOutFragment"
        android:label="@string/menu_sign_out"
        tools:layout="@layout/fragment_tools" />

</navigation>