<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_user_main_panel">

    <LinearLayout
        android:id="@+id/options_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:weightSum="3"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/favourites_movies"
            android:theme="@style/AppTheme.Button" />

        <Button
            android:id="@+id/music"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/favourites_songs"
            android:theme="@style/AppTheme.Button" />

        <Button
            android:id="@+id/books"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/favourites_books"
            android:theme="@style/AppTheme.Button" />

    </LinearLayout>


        <fragment
            android:layout_below="@+id/options_panel"
            android:id="@+id/nav_host_fragment"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:defaultNavHost="true"
            app:navGraph="@navigation/mobile_navigation" />
</RelativeLayout>