<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/resource"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/title"
                    android:textSize="20sp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:id="@+id/resource_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/resource"
                    android:layout_alignLeft="@+id/resource"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:text="Retersan"
                    android:textSize="18sp">

                </TextView>

                <TextView
                    android:id="@+id/author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/resource_id"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/author"
                    android:textSize="20sp"
                    android:textStyle="bold">

                </TextView>


                <TextView
                    android:id="@+id/author_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/author"
                    android:layout_alignLeft="@+id/author"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:text="broxar@gmail.com"
                    android:textSize="18sp">

                </TextView>

            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="40dp"
                android:src="@drawable/ic_book_black_24dp"
                android:text="Retersan">

            </ImageView>

        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:layout_margin="20dp"
            android:background="@color/colorAccent">

        </View>

        <TextView
            android:id="@+id/resource_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/description"
            android:textColor="@color/textOnAccent"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="30dp"
            android:text="@string/example_description"
            android:textSize="18sp"/>
    </LinearLayout>

</LinearLayout>